--- a/app/views/paldemic_files/_form.html.erb
+++ b/app/views/paldemic_files/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :name %>
 
     <%= f.label :file %>
-    <%= f.text_area :file %>
+    <%= f.file_field :file%>
   </div>
 
   <div class="field">
