--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -1,15 +1,18 @@
 <script>
 
-  <% @paldemic_files.each do |paldemic_file, index| %>
-  //since i can't actually put the data in the url, instead shove it into local storage on click before going over there
-    function click<%=index %>(){
-        $("#paldemicFile<%=index %>").onmousedown(function(){
+    $(window).load(function() {
+        alert("window load occurred!");
+        //since i can't actually put the data in the url, instead shove it into local storage on click before going over there
+        <% @paldemic_files.each_with_index do |paldemic_file, index| %>
+        //for file <%=paldemic_file.name %>
+        $("#paldemicFile<%=index %>").click(function(){
             alert("clicking on paldemic file <%=index %> ");
-            storeFile(<%=paldemic_file.file %>);
+            storeFile("<%=paldemic_file.name %>");
         });
-    }
 
-  <% end %>
+        <% end %>
+    });
+
 </script>
 <p id="notice"><%= notice %></p>
 
@@ -28,9 +31,9 @@
   </thead>
 
   <tbody>
-    <% @paldemic_files.each do |paldemic_file,index| %>
+    <% @paldemic_files.each_with_index do |paldemic_file,index| %>
       <tr>
-        <td><%=link_to("http://www.farragofiction.com/PaldemicSim/?data=#{paldemic_file.file}", id: "paldemicFile#{index}"){paldemic_file.name}%> </td>
+        <td><span id = 'paldemicFile<%=index%>'><%=paldemic_file.name%></span> </td>
         <td><%= paldemic_file.author %></td>
         <td><%= paldemic_file.num_downloads %></td>
         <td><%= paldemic_file.num_upvotes %></td>
