open in new tab i guess

--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -6,7 +6,7 @@
         //for file <%=paldemic_file.name %>
         $("#paldemicFile<%=index %>").click(function(){
             storeFile("<%=paldemic_file.file %>");
-            window.location.href = "http://www.farragofiction.com/PaldemicSim/?data=inCachePreview";
+            window.open("http://www.farragofiction.com/PaldemicSim/?data=inCachePreview","_blank");
         });
 
         <% end %>
