I am a living god

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
           alert("Hello World");
       }
 
+      //not actually going to be used cuz can't do local storage shit across domains, derp
       function storeFile(fileString){
           var tag = "PALDEMICPREVIEWFILE";
           try{
