simple css as a placeholder

--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -1,7 +1,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Paldemic Files</h1>
+<h1><span class = "logoName">Paldemic</span> Files</h1>
 
 <table>
   <thead>
