--- a/app/assets/stylesheets/paldemic_files.scss
+++ b/app/assets/stylesheets/paldemic_files.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the PaldemicFiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@font-face {
+  font-family: cabin;
+  src: font-url("cabin.regular.ttf");
+}
+
+@font-face {
+  font-family: norse;
+  src: font-url("viking/Viking.ttf");
+}
