destroying files should be wired up to a simple unencrypted password

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
   </head>
 
   <body>
-    <%= yield %>
+  <h1><span class = "logoName">Paldemic</span> Files</h1>
+
+  <%= yield %>
   </body>
 </html>
