got to list and not edit on delete

--- a/app/views/paldemic_files/_form.html.erb
+++ b/app/views/paldemic_files/_form.html.erb
@@ -40,9 +40,12 @@
 <% if paldemic_file.id != nil %>
 <br>
 If you want to delete:
-<%= form_tag paldemic_file_path(id: paldemic_file.id), method: :delete do %>
-  <%= label_tag "******" %>
-  <%= password_field_tag 'pw', '' %>
-  <input value='Delete File' type='submit' id='submit-form'/>
+<%= form_for(paldemic_file, action: "delete") do |f| %>
+  <%= f.label "******" %>
+  <%= f.text_field :pw, :value=>"" %>
+
+    <div class="actions">
+      <%= f.submit%>
+    </div>
 <% end %>
 <%end %>
