--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -2,36 +2,28 @@
 <p id="notice"><%= notice %></p>
 
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Author</th>
-      <th>Num upvotes</th>
-      <th>Num downvotes</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
   TODO:
   <li>style everything</li>
   <li>voting buttons</li>
-  <li>simple validation for uploaded files (reject if no file)</li>
+  <li>pagination</li>
   <li>ability to sort files by total votes or downloads</li>
   <li>add db migration to add 'view count' as well and increment when sent to chat viewer </li>
   <li>filter by keywords (author, file name, etc)</li>
     <% @paldemic_files.each_with_index do |paldemic_file,index| %>
-      <tr>
-        <td><%=link_to("http://www.farragofiction.com/PaldemicSim?id=#{paldemic_file.id}", target:"_blank"){paldemic_file.name}%> </td>
-        <td><%= paldemic_file.author %></td>
-        <td><%= paldemic_file.num_upvotes %></td>
-        <td><%= paldemic_file.num_downvotes %></td>
-        <td><%= link_to 'Edit', edit_paldemic_file_path(paldemic_file) %></td>
-      </tr>
+      <div class = 'voting'>
+        <img class = "upArrow" src = "up.png">
+        <div class = "voteAmount"><%=paldemic_file.up.total_votes %></div>
+        <img class = "downArrow" src = "down.png">;
+      </div>
+      <div class = 'fileLine'>
+        <li><%=link_to("http://www.farragofiction.com/PaldemicSim?id=#{paldemic_file.id}", target:"_blank"){paldemic_file.name}%>
+          <div class = "author">Posted By: <%= paldemic_file.author %></div>
+        <%= link_to 'Edit', edit_paldemic_file_path(paldemic_file) %>
+        </li>
+      </div>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
 
