make sure the votes have been initialized

--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -13,7 +13,7 @@
     <% @paldemic_files.each_with_index do |paldemic_file,index| %>
       <div class = 'voting'>
         <img class = "upArrow" src = "up.png">
-        <div class = "voteAmount"><%=paldemic_file.up.total_votes %></div>
+        <div class = "voteAmount"><%=paldemic_file.total_votes %></div>
         <img class = "downArrow" src = "down.png">;
       </div>
       <div class = 'fileLine'>
