smaller arrows and they darken on hover

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,22 @@ html, body {
     position: absolute;
 }
 
+.upArrow{
+    width: 18px;
+}
+
+.downArrow{
+    width: 16px;
+}
+
+.upArrow:hover{
+    background-color: #333333;
+}
+
+.downArrow:hover{
+    background-color: #333333;
+}
+
 .logoName{
     font-family: 'norse', sans-serif;
 }
