updated todo, time for a break

--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -6,6 +6,7 @@
   TODO:
   <li>wire up voting buttons</li>
   <li>add db migration for description</li>
+  <li>limit description and name lengths</li>
   <li>pagination</li>
   <li>ability to sort files by total votes or downloads</li>
   <li>add db migration to add 'view count' as well and increment when sent to chat viewer </li>
