--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -15,7 +15,7 @@
       <div class = "paldemicFile">
           <div class = 'voting'>
             <%=link_to(image_tag("up.png", :class=> "upArrow"), "") %>
-            <div class = "voteAmount"><%=paldemic_file.total_votes %></div>
+            <div class = "voteAmount" id = "voteTotal<%=paldemic_file.id %>"><%=paldemic_file.total_votes %></div>
             <%=link_to(image_tag("down.png", :class=> "downArrow"), "") %>
           </div>
           <div class = 'fileLine'>
