--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -4,7 +4,7 @@
 
 
   TODO:
-  <li>wire up voting buttons</li>
+  <li>ajax voting buttons (don't update page, don't allow multple voting without refreshing)</li>
   <li>add db migration for description</li>
   <li>limit description and name lengths</li>
   <li>pagination</li>
@@ -14,9 +14,9 @@
     <% @paldemic_files.each_with_index do |paldemic_file,index| %>
       <div class = "paldemicFile">
           <div class = 'voting'>
-            <%=link_to(image_tag("up.png", :class=> "upArrow"), "") %>
+            <%=link_to(image_tag("up.png", :class=> "upArrow"), upvote_paldemic_file_path(:id=> paldemic_file.id), :method=>"put") %>
             <div class = "voteAmount" id = "voteTotal<%=paldemic_file.id %>"><%=paldemic_file.total_votes %></div>
-            <%=link_to(image_tag("down.png", :class=> "downArrow"), "") %>
+            <%=link_to(image_tag("down.png", :class=> "downArrow"), downvote_paldemic_file_path(:id=> paldemic_file.id),:method=>"put") %>
           </div>
           <div class = 'fileLine'>
             <%=link_to("http://www.farragofiction.com/PaldemicSim?id=#{paldemic_file.id}", target:"_blank", :class=>"fileLink"){paldemic_file.name}%>
