--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -6,6 +6,7 @@
   TODO:
   <li>ajax voting buttons (don't update page, don't allow multple voting without refreshing)</li>
   <li>add db migration for description</li>
+  <li>if name is nil, or empty, add default name or it can't be clicked on</li>
   <li>limit description and name lengths</li>
   <li>pagination</li>
   <li>ability to sort files by total votes or downloads</li>
