don't allow blank names

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@ html, body {
     background-color: #595959;
     margin: 5px;
     padding: 10px;
-    width: 600px;
+    width: 90%
 }
 
 .voting{
