--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -6,6 +6,7 @@
   TODO:
   <li>ability to sort files by total votes or downloads</li>
   <li>add db migration for description</li>
+  <li>if file isn't present, don't reject, but also don't replace in database</li>
   <li>if name is nil, or empty, add default name or it can't be clicked on</li>
   <li>limit description and name lengths</li>
   <li>filter by keywords (author, file name, etc)</li>
