--- a/app/views/paldemic_files/show.html.erb
+++ b/app/views/paldemic_files/show.html.erb
@@ -11,6 +11,12 @@
 </p>
 
 <p>
+  <strong>Num Views:</strong>
+  <%= @paldemic_file.num_views %>
+</p>
+
+
+<p>
   <strong>Num downloads:</strong>
   <%= @paldemic_file.num_downloads %>
 </p>
