--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -26,8 +26,11 @@
           </div>
           <div class = 'fileLine'>
             <%=link_to("http://www.farragofiction.com/PaldemicSim?id=#{paldemic_file.id}", target:"_blank", :class=>"fileLink"){paldemic_file.name}%>
-              <div class = "author">Posted By: <%= paldemic_file.author %></div>
-            <%= link_to 'Edit', edit_paldemic_file_path(paldemic_file) %>
+              <div class = "author">Posted By: <%= paldemic_file.author %>,
+                <%=paldemic_file.num_views %> Views, <%=paldemic_file.num_downloads %> Downloads
+                <%= link_to 'Edit', edit_paldemic_file_path(paldemic_file) %>
+              </div>
+
 
           </div>
       </div>
