ready to test description

--- a/app/views/paldemic_files/_form.html.erb
+++ b/app/views/paldemic_files/_form.html.erb
@@ -25,6 +25,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </div>
+
+  <div class="field">
     Password:
     <br>(Means only you or an admin can edit/delete)<br>
     <%= f.text_field :pw, :value=>"" %>
