shouldn't need to reupload a file to edit a thing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,10 @@ html, body {
     position: absolute;
 }
 
+.description{
+    height: 30px;
+}
+
 .fileLine{
     padding-left: 10px;
     width: 96%;
