ready to deploy

--- a/app/views/paldemic_files/show.html.erb
+++ b/app/views/paldemic_files/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Description:</strong>
+  <%= @paldemic_file.description %>
+</p>
+
+<p>
   <strong>Num Views:</strong>
   <%= @paldemic_file.num_views %>
 </p>
