--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -4,6 +4,7 @@
 
 
   TODO:
+  <li>Figure out why linked files sometimes fail to parse???  </li>
   <li>ability to change sort by (name, downloads, views, votes)</li>
   <li>if file isn't present, don't reject, but also don't replace in database</li>
   <li>filter by keywords (author, file name, etc)</li>
