--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -7,7 +7,7 @@
   <li>Figure out why linked files sometimes fail to parse???  </li>
   <li>ability to change sort by (name, downloads, views, votes)</li>
   <li>if file isn't present, don't reject, but also don't replace in database</li>
-  <li>filter by keywords (author, file name, etc)</li>
+  <li>filter by keywords (author, file name, etc) (named scope?)</li>
   <li>pagination</li>
   <li>ajax voting buttons (don't update page, don't allow multple voting without refreshing)</li>
 
