--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -11,6 +11,9 @@
 
 <%= link_to 'New Paldemic File', new_paldemic_file_path %>
 
+<div class = "votes">
+  Sort By: <%=link_to "Total Votes" ,paldemic_files_path(:sort=>"total_votes")%>
+</div>
 
     <% @paldemic_files.each_with_index do |paldemic_file,index| %>
       <div class = "paldemicFile">
