now to repeat for each search

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,9 @@ html, body {
 }
 
 .currentSort{
-    background-color: yellow;
+    background-color: #595959;
+    font-weight: bold;
+
 }
 .description{
     height: 30px;
