--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -5,6 +5,7 @@
 
   TODO:
   <li>filter by keywords (author, file name, etc) (named scope?)</li>
+  <li>let you download copies, keep track of number of downloads</li>
   <li>pagination</li>
 
 <%= link_to 'New Paldemic File', new_paldemic_file_path, :class => "new_link" %>
