--- a/app/views/paldemic_files/index.html.erb
+++ b/app/views/paldemic_files/index.html.erb
@@ -5,6 +5,7 @@
 
   TODO:
   <li>filter by keywords (author, file name, etc) (named scope?)</li>
+  <li>on creation page, link to paldemic so they know how to make a file</li>
   <li>let you download copies, keep track of number of downloads</li>
   <li>pagination</li>
 
