--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,15 @@ html, body {
     border-radius: 15px;
 }
 
+.fileSection{
+    background-color: #000000;
+    border-radius: 15px;
+    border: 1px solid black;
+    width: 175px;
+    padding: 15px;
+
+}
+
 .description{
     height: 30px;
 }
