--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-  <h1><span class = "logoName">Paldemic</span> Files</h1>
+  <h1><span class = "logoName">Plague Doctors: Paldemic File Database</span></h1>
 
   <%= yield %>
   </body>
