--- a/app/views/paldemic_files/show.html.erb
+++ b/app/views/paldemic_files/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h1><%=@paldemic_file.name %></h1>
+<h3>(by <%=@paldemic_file.author %>)</h3>
 <iframe class = 'paldemicIFrame' src="http://www.farragofiction.com/PaldemicSim/?id=<%=@paldemic_file.id%>>">
 
 </iframe>
