--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-  <h1><span class = "logoName">Plague Doctors: Paldemic File Database</span></h1>
+  <h1><a style = "color:#c4c4c4;" href= "/" class = "logoName">Plague Doctors: Paldemic File Database</a></h1>
 
   <%= yield %>
   </body>
