slightly easier debugging

--- a/app/views/time_holes/index.html.erb
+++ b/app/views/time_holes/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Wigglerjson</th>
+      <th>Breeder</th>
       <th>Permanent</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,8 @@
     <% @time_holes.each do |time_hole| %>
       <tr>
         <td><%= time_hole.name %></td>
+        <td><%= time_hole.breeder %></td>
+
         <td><%= time_hole.permanent %></td>
         <td><%= link_to 'Show', time_hole %></td>
         <td><%= link_to 'Edit', edit_time_hole_path(time_hole) %></td>
