--- a/app/views/time_holes/_form.html.erb
+++ b/app/views/time_holes/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :wigglerJSON %>
-    <%= f.text_field :wigglerJSON %>
+    <%= f.text_area :wigglerJSON %>
   </div>
 
   <div class="field">
