--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,14 @@ html, body {
     text-overflow: ellipsis;
 }
 
+.dollString{
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100px;
+    text-overflow: ellipsis;
+}
+
 .voteAmount{
     text-align: center;
     font-size: 16px;
