timeholes should be associated with a default caretaker

--- a/app/views/time_holes/index.html.erb
+++ b/app/views/time_holes/index.html.erb
@@ -8,6 +8,7 @@
       <th>Wigglerjson</th>
       <th>Breeder</th>
       <th>Permanent</th>
+      <th>Caretaker</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,6 +20,8 @@
         <td><%= time_hole.breeder %></td>
 
         <td><%= time_hole.permanent %></td>
+        <td><%=link_to time_hole.caretaker.name, caretaker_path(time_hole.caretaker) %></td>
+
         <td><%= link_to 'Show', time_hole %></td>
         <td><%= link_to 'Edit', edit_time_hole_path(time_hole) %></td>
         <td><%= link_to 'Destroy', time_hole, method: :delete, data: { confirm: 'Are you sure?' } %></td>
