sorting for caretakers

--- a/app/views/caretakers/index.html.erb
+++ b/app/views/caretakers/index.html.erb
@@ -8,6 +8,8 @@
       <th>Name</th>
       <th>Doll</th>
       <th>Desc</th>
+      <th>grubs donated</th>
+      <th>grubs adopted</th>
       <th>Good boi points</th>
       <th>Bad boi points</th>
       <th>Login</th>
@@ -21,6 +23,9 @@
         <td><%= caretaker.name %></td>
         <td class = "dollString"><%= caretaker.doll %></td>
         <td><%= caretaker.desc %></td>
+        <td><%= caretaker.grubs_donated %></td>
+        <td><%= caretaker.grubs_adopted %></td>
+
         <td><%= caretaker.good_boi_points %></td>
         <td><%= caretaker.bad_boi_points %></td>
         <td><%= caretaker.login %></td>
