--- a/app/views/tombstone_timeholds/_form.html.erb
+++ b/app/views/tombstone_timeholds/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :rating %>
+    <%= f.text_field :rating %>
+  </div>
+
+  <div class="field">
     <%= f.label :permanent %>
     <%= f.check_box :permanent %>
   </div>
