--- a/app/views/time_holes/index.html.erb
+++ b/app/views/time_holes/index.html.erb
@@ -9,6 +9,7 @@
       <th>Breeder</th>
       <th>Permanent</th>
       <th>Caretaker</th>
+      <th>DollString</th>
       <%TimeHole.json_keys.each do |key| %>
       <th><%=key %></th>
 
@@ -25,8 +26,9 @@
 
         <td><%= time_hole.permanent %></td>
         <td><%=link_to time_hole.caretaker.name, caretaker_path(time_hole.caretaker) %></td>
+        <td><textarea rows="3" cols="50"><%=time_hole.parsedPetJSON["dollDATAURL"] %></textarea></td>
         <% TimeHole.json_keys.each do |key| %>
-          <td style="width:100px;overflow: auto"><%=time_hole.parsedPetJSON[key] %></td>
+          <td><%=time_hole.parsedPetJSON[key] %></td>
 
         <% end %>
 
