--- a/app/views/all_seeing_eyes/index.html.erb
+++ b/app/views/all_seeing_eyes/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div style = 'background-image: url('<%=image_path ('friend.png') %>')'>
 <h1>All Seeing Eyes</h1>
 
 <table id = "thing">
@@ -20,3 +21,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
