--- a/app/assets/stylesheets/all_seeing_eyes.scss
+++ b/app/assets/stylesheets/all_seeing_eyes.scss
@@ -5,3 +5,13 @@
 #thing{
   background: #1d388c;
 }
+
+.background-image-holder{
+  width:100%;
+  height: 100%;
+  position: fixed;
+  left:0px;
+  top:0px;
+  min-height: 100vh;
+  min-width: 100vw;
+}
