--- a/app/assets/stylesheets/all_seeing_eyes.scss
+++ b/app/assets/stylesheets/all_seeing_eyes.scss
@@ -9,10 +9,10 @@
 .background-image-holder{
   width:100%;
   height: 100%;
-  position: fixed;
+  position: relative;
   overflow: auto;
-  left:0px;
-  top:0px;
+  left:-55px;
+  top:-123px;
   min-height: 100vh;
   min-width: 100vw;
 }
