--- a/app/views/tombstone_timeholds/index.html.erb
+++ b/app/views/tombstone_timeholds/index.html.erb
@@ -19,8 +19,8 @@
         <td><%= tombstone_timehold.permanent %></td>
         <td><%= tombstone_timehold.rating %></td>
 
-        <td><%=link_to("Vote Up", upvote_tombstone_timehold_path(:id=> tombstone_timehold.id), :method=>"put") %></td>
-        <td><%=link_to("Vote Down", downvote_tombstone_timehold_path(:id=> tombstone_timehold.id), :method=>"put") %></td>
+        <td><%=link_to("Vote Up", upvote_tombstone_timehold_path(:id=> tombstone_timehold.id), :method=>"get") %></td>
+        <td><%=link_to("Vote Down", downvote_tombstone_timehold_path(:id=> tombstone_timehold.id), :method=>"get") %></td>
         <td><%= link_to 'Show', tombstone_timehold %></td>
         <td><%= link_to 'Edit', edit_tombstone_timehold_path(tombstone_timehold) %></td>
         <td><%= link_to 'Destroy', tombstone_timehold, method: :delete, data: { confirm: 'Are you sure?' } %></td>
